# leoaugusto

./: .cloudflare-pages.toml  .gitignore  .prettierignore  .watchmanconfig  Cargo.toml  Comtemp.txt  HeroSection-optimized.tsx  MacroLayout.txt  README.md  base64-output.txt  baseline-analysis.js  blurhash-base64-optimization-gameplan.txt  deployment-status.sh  example.ts  final-rust-edge-test.js  final-validation.js  generate-base64.js  generate-optimized-lqip.js  global.txt  hero-base64-clean.txt  hero-base64.txt  hero-data-uri.txt  hero-og-base64.txt  index.html  main.js  next.config.ts  optimization-validation.js  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  powered-upAI.text  rust-edge-performance-analysis.txt  style.css  test-format.ts  test-formatting.ts  tsconfig.json  validate-hero-optimization.js  validate-rust-edge-performance.js  vercel.json  (+3 more)
.github/workflows/: deploy.yml
api/: hero-image-warmup.rs  hero-image.rs
docs/: rust-edge-function.md
playwright-report/: index.html
public/: _headers  la.avif  robots.txt
public/images/: AngeloMiranda.avif  Aulas-Grid.avif  aulas.avif  lfam.avif  palestras3.avif  palestras4.avif  palestras5.avif  videosection.avif
scripts/: analyze-hero-performance.js  baseline-analysis.js  blurhash-analysis.js  final-validation.js  generate-blur.mjs  hero-library-analysis.js  optimize-og-image.mjs  rust-edge-performance-test.js  rust-edge-performance-test.mjs  update-og-image.js  validate-1ms-target.js  validate-optimization.js
src/app/: globals.css  (+4 more)
test-results/: performance-results.json
(+61 files in other folders)
