[package]
name = "hero-image-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = "1.1.0"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", features = ["avif", "webp", "jpeg"] }
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "hero-image"
path = "api/hero-image.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
