[package]
name = "hero-image-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
vercel_runtime = "1.1.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json", "stream", "http2", "rustls-tls"], default-features = false }
http = "1.0"

[[bin]]
name = "hero-image"
path = "api/hero-image.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
